# phoneme-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
bash/: evaluate_phoneme_extraction.sh  evaluate_phoneme_recognition.sh  finetune.sh  finetune_parakeet.sh  finetune_stt_en_conformer.sh  nemo_eval.sh  parquet_evaluate.sh  parquet_finetune.sh  sort_imports.sh  train_tokenizer.sh
config/: speech_to_text_finetune.yaml
data/filipinospeechcorpus/data/: test_manifest.json  train_manifest.json  valid_manifest.json
data/magichub/asr-sfdusc/: test_manifest.json  train_manifest.json  valid_manifest.json
data/nexdata/filipino_822/: test_manifest.json  train_manifest.json  valid_manifest.json
src/asr/: asr_eval.py  asr_train.py
src/datasets/: pr_dataset.py
src/datasets/fsc/: make_manifest.py
src/engines/: fusion.py  kotone.py  kotone_build.py  kotone_combined.py  kotone_ctc.py  raripa.py  raripa_build.py  raripa_combined.py  raripa_ctc.py
src/metrics/: evaluation.py
src/scripts/: augmented_ctc_finetune.py  cli_kotone_eval.py  cli_kotone_inference.py  cli_kotone_train.py  cli_raripa_eval.py  cli_raripa_inference.py  cli_raripa_train.py  finetune.py  inference_nemo.py  inspect_model.py  kotone_eval.py  kotone_inference.py  kotone_train.py  nemo_convert.py  nemo_eval.py  parse_eval_transcripts.py  raripa_eval.py  raripa_inference.py  raripa_train.py  speech_to_text_finetune.py  test_allosaurus.py
src/utils/: augmented_ctc_loss.py  cli_utils.py  file_read.py  g2p.py  panphon_feature_extractor.py  preview_callback.py  sliding_window.py  train_test_val_split.py
(+14 files in other folders)
