[project]
name = "asr-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "black>=26.1.0",
    "epitran>=1.34.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "nemo-toolkit[asr]>=2.6.1",
    "panphon>=0.22.2",
    "pysdtw>=0.0.5",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
]
