[project]
name = "phoneme-recognition"
version = "0.1.0"
description = "Phoneme recognition undergraduate research project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "epitran>=1.34.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "nemo-toolkit[asr]>=2.6.1",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
]
