[project]
name = "phoneme-recognition"
version = "0.1.0"
description = "Phoneme recognition undergraduate research project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "epitran>=1.34.0",
    "jiwer==2.3.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "nemo-toolkit[asr]>=2.3.0",
    "scikit-learn>=1.8.0",
    "torch>=2.4.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "torchinfo>=1.8.0",
    "transformers[torch]>=5.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
]
